[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xsync"
version = "0.1.0"
description = "Personal X archive CLI for posts, bookmarks, threads, and media."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "httpx",
  "typer",
  "xdk",
]

[project.scripts]
xsync = "xsync.cli:app"

[dependency-groups]
dev = [
  "pytest",
  "ruff",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "B",
  "UP",
]
